--- a/styles.css
+++ b/styles.css
@@ -1,72 +1,68 @@
 body{
-    margin: 0; 
-    background-color: rgb(214, 213, 213);
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    height:100vh;
+margin: 0; 
+background-color: rgb(214, 213, 213); 
+display:flex; 
+justify-content: center; 
+align-items: center; 
+height:100vh; 
 }
 
-h1{
-    text-align: center;
+ h1{ 
+    text-align: center; 
+} 
+
+ #content{
+     background-color: antiquewhite; 
+     border: 1px solid rgb(183, 180, 180); 
+     width:750px; 
+     height:110vh
+    } 
+
+ .inner-box{ 
+    width:98%; 
+    height:98%; 
+    border: 2px solid rgb(55, 55, 55); 
+    box-sizing: border-box; 
+    position:relative; 
+    top:8px; 
+    left:7px 
+} 
+
+ p{ 
+    color:rgb(48, 173, 173); 
+    text-align: center; 
+    font-size: large; 
+    font-weight:bold; 
 }
 
-#content{
-    background-color: antiquewhite;
-    border: 1px solid rgb(183, 180, 180);
-    width:750px;
-    height:850px;
+ hr{ 
+    border: none; 
+    height: 2px; 
+    background: rgb(48, 173, 173); 
+    width: 80%; 
+    margin: 20px auto; 
+} 
 
+ #content img{ 
+    display: block; 
+    margin: 20px auto; 
+    max-width: 100%; 
+    height: auto; 
+} 
+ 
+ h2 { 
+    text-align: center; 
+    margin-top: 30px; 
+} 
+
+ :is(.list1, .list2, .list3) { 
+    list-style-type: none; 
+    padding-left: 30%; 
+    text-align: left; 
+    max-width: 500px; 
+    margin: 0 auto 60px auto; 
+} 
+
+ .list1{ 
+    padding-left: 20%; 
 }
-
-.inner-box{
-    width:98%;
-    height:98%;
-    border: 2px solid rgb(55, 55, 55);
-    box-sizing: border-box;
-    position:relative;
-    top:8px;
-    left:7px
-}
-
-p{
-    color:rgb(48, 173, 173);
-    text-align: center;
-    font-size: large;
-    font-weight:bold;
-}
-
-hr{
-    border: none;
-    height: 2px;
-    background: rgb(48, 173, 173);
-    width: 80%;
-    margin: 20px auto;
-
-}
-
-#content img{
-    display: block;
-    margin: 20px auto;
-    max-width: 100%;  
-    height: auto;
-}
-
-h2 {
-    text-align: center;
-    margin-top: 30px;
-}
-
-:is(.list1, .list2, .list3) {
-    list-style-type: none;
-    padding-left: 30%;
-    text-align: left;
-    max-width: 500px;
-    margin: 0 auto 60px auto;
-
-}
-
-.list1{
-    padding-left: 20%;
-}
-
