--- a/styles.css
+++ b/styles.css
@@ -11,22 +11,23 @@ height:100vh;
     text-align: center; 
 } 
 
- #content{
-     background-color: antiquewhite; 
-     border: 1px solid rgb(183, 180, 180); 
-     width:750px; 
-     height:110vh
-    } 
+#content {
+    background-color: antiquewhite;
+    border: 1px solid rgb(183, 180, 180);
+    width: 100%;
+    max-width: 750px;
+    height: auto;
+    overflow:hidden;
+    margin: auto
+}
 
- .inner-box{ 
-    width:98%; 
-    height:98%; 
-    border: 2px solid rgb(55, 55, 55); 
-    box-sizing: border-box; 
-    position:relative; 
-    top:8px; 
-    left:7px 
-} 
+.inner-box {
+    width: 95%; 
+    margin: 2% auto;
+    border: 2px solid rgb(55, 55, 55);
+    box-sizing: border-box;
+    padding: 20px;
+}
 
  p{ 
     color:rgb(48, 173, 173); 
